--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
                 <div class="logo">
                     <img src="img/iconfinder_river_494761.png" alt="River">
                 </div>
-                <div class="icono" id="icono">
-                    <span>&#9776;</span>
-                </div>
-                <div class="enlaces uno" id="enlaces">
-                <a href="#" class="active">home</a>
-                <a href="#">About Us</a>
-                <a href="#">Gallery Places</a>
-                <a href="#">Contact</a>
-                </div>
+               <div>
+                <ul class="navigation">
+                    <li><a class="ham" href="#">&#9776; Menu</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+               </div>  
             </nav>
             <div class="textos">
                 <h1>Salmon Rivers</h1>
@@ -49,5 +48,6 @@
              </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script src="js/salmon.js"></script>
     </body>
 </html>
