--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="contain">
                 <div class="weather-container">
                     <div class="weather-icon">
-                        <img src="img/icons/" alt="">
+                        <img src="icons/unknown.png" alt="">
                     </div>
                     <div class="temperature-value">
                         <p>- ° <span>C</span></p>
