--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
             </div>
             <div class="box">
+                <!--
             <div class="contain">
                 <div class="weather-container">
                     <div class="weather-icon">
@@ -98,6 +99,7 @@
                         One councillor from each of the three-member wards is elected 
                         every year for three years. </p>
             </div>
+    -->
             <div class="contain">
                 <img class="image" src="img/river1.jpg">
                 </div>
@@ -116,6 +118,15 @@
                                 <div class="contain">
                                     <img class="image" src="img/rafting2.jpg">
                                     </div>
+                                    <div class="contain">
+                                        <img class="image" src="img/casa1.jpg">
+                                        </div>
+                                        <div class="contain">
+                                            <img class="image" src="img/casa2.jpg">
+                                            </div>
+                                            <div class="contain">
+                                                <img class="image" src="img/casa3.jpg">
+                                                </div>
         </div>
         </main>
         <div>
