--- a/contant.html
+++ b/contant.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/large.css">
     
 
-    <title>Salmon River Adventures.</title>
+    <title>Contant.</title>
     </head> 
     <body onload="loadDoc()">
         
