--- a/reservation.html
+++ b/reservation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/large.css">
     
 
-    <title>Salmon River Adventures.</title>
+    <title>Reservation.</title>
     </head> 
     <body onload="loadDoc()">
         
