--- a/index.html
+++ b/index.html
@@ -64,42 +64,6 @@
 
             </div>
             <div class="box">
-                <!--
-            <div class="contain">
-                <div class="weather-container">
-                    <div class="weather-icon">
-                        <img src="icons/unknown.png" alt="">
-                    </div>
-                    <div class="temperature-value">
-                        <p>- ° <span>C</span></p>
-                    </div>
-                    <div class="temperature-description">
-                            <p>-</p>
-                    </div>
-                    <div class="location">
-                            <p>-</p>
-                </div>
-                <div id="demo"></div>
-                </div>
-            </div>
-                <div class="contain">
-                  <img class="image" src="img/salmonriver.jpg">
-                  </div>
-  
-                <div class="contain">
-                    <h3>3PRESTON INFORMATION</h3><br>
-
-                    <p>The City of Preston is divided into 22 district 
-                        council wards represented by 57 councillors. 
-                        There are nine wards with two councillors and 13 
-                        wards with three councillors. The two seat wards cover c. 
-                        3600 electors and the three seat wards c. 5400 electors. 
-                        Preston City councillors serve a four-year term. 
-                        Preston City Council is elected "by thirds", 19 at a time. 
-                        One councillor from each of the three-member wards is elected 
-                        every year for three years. </p>
-            </div>
-    -->
             <div class="contain">
                 <img class="image" src="img/river1.jpg">
                 </div>
@@ -139,5 +103,6 @@
     </div>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script src="js/salmon.js"></script>
+        <script src="js/weather.js"></script>
     </body>
 </html>
