--- a/reservation.html
+++ b/reservation.html
@@ -44,90 +44,28 @@
         </header>
 
         <main>
-            <div class="box1">
-                <div class="weather-container">
-                    <div class="weather-icon">
-                        <img src="icons/unknown.png" alt="">
+            <div class="contenedorform">
+                <form action="">
+                    <div class="form-header">
+                        <h4 class="form-title"><span>Fill the form to make a reservation</span></h4>
                     </div>
-                    <div class="temperature-value">
-                        <p>- ° <span>C</span></p>
-                    </div>
-                    <div class="temperature-description">
-                            <p>-</p>
-                    </div>
-                    <div class="location">
-                            <p>-</p>
-                </div>
-                <div id="demo"></div>
-                </div>
-            </div>
+                    <label for="name" class="form-label">Name: </label>
+                    <input type="text" id="name" class="form-input" placeholder="Write your name">
+
+                    <label for="address" class="form-label">Address: </label>
+                    <input type="text" id="address" class="form-input" placeholder="Write your address">
+
+
+                    <label for="email" class="form-label">Email: </label>
+                    <input type="email" id="email" class="form-input" placeholder="Write your email">
+                    
+                    <label for="message" class="form-label">Message: </label>
+                    <textarea type="text" id="message" class="form-input" placeholder="Write your message"></textarea>
+
+                    <input type="submit" class="bnt-sumit" value="Send message">
+                </form>
 
             </div>
-            <div class="box">
-                <!--
-            <div class="contain">
-                <div class="weather-container">
-                    <div class="weather-icon">
-                        <img src="icons/unknown.png" alt="">
-                    </div>
-                    <div class="temperature-value">
-                        <p>- ° <span>C</span></p>
-                    </div>
-                    <div class="temperature-description">
-                            <p>-</p>
-                    </div>
-                    <div class="location">
-                            <p>-</p>
-                </div>
-                <div id="demo"></div>
-                </div>
-            </div>
-                <div class="contain">
-                  <img class="image" src="img/salmonriver.jpg">
-                  </div>
-  
-                <div class="contain">
-                    <h3>3PRESTON INFORMATION</h3><br>
-
-                    <p>The City of Preston is divided into 22 district 
-                        council wards represented by 57 councillors. 
-                        There are nine wards with two councillors and 13 
-                        wards with three councillors. The two seat wards cover c. 
-                        3600 electors and the three seat wards c. 5400 electors. 
-                        Preston City councillors serve a four-year term. 
-                        Preston City Council is elected "by thirds", 19 at a time. 
-                        One councillor from each of the three-member wards is elected 
-                        every year for three years. </p>
-            </div>
-    -->
-            <div class="contain">
-                <img class="image" src="img/river1.jpg">
-                </div>
-                <div class="contain">
-                    <img class="image" src="img/river2.jpg">
-                    </div>
-                    <div class="contain">
-                        <img class="image" src="img/kayak1.2.jpg">
-                        </div>
-                        <div class="contain">
-                            <img class="image" src="img/kayak1.jpg">
-                            </div>
-                            <div class="contain">
-                                <img class="image" src="img/rafting1.jpg">
-                                </div>
-                                <div class="contain">
-                                    <img class="image" src="img/rafting2.jpg">
-                                    </div>
-                                    <div class="contain">
-                                        <img class="image" src="img/casa1.jpg">
-                                        </div>
-                                        <div class="contain">
-                                            <img class="image" src="img/casa2.jpg">
-                                            </div>
-                                            <div class="contain">
-                                                <img class="image" src="img/casa3.jpg">
-                                                </div>
-        </div>
         </main>
         <div>
         <footer>
