--- a/reservation.html
+++ b/reservation.html
@@ -47,7 +47,7 @@
             <div class="contenedorform">
                 <form action="">
                     <div class="form-header">
-                        <h4 class="form-title"><span>Fill the form to make a reservation</span></h4>
+                        <h4 class="form-title"><span>RESERVATION FORM</span></h4>
                     </div>
                     <label for="name" class="form-label">Name: </label>
                     <input type="text" id="name" class="form-input" name="name" pattern="[A-z\s]{5,}"
