--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="wave" style="height: 150px; overflow: hidden;" >
                 <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                    <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(240, 243, 247);"></path></svg></div>
+                    <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg></div>
         </header>
 
         <main>
@@ -65,23 +65,34 @@
             </div>
             <div class="box">
             <div class="contain">
-                <img class="image" src="img/river1.jpg">
+                <h4 class="form-title"><span>RAFTING</span></h4>
+                <p>The first step in the wonderful waves of the Dora Baltea 
+                    river. A trip that combines beautiful and natural 
+                    scenery plus action, to be enjoyed by anyone.
+                    This is the choice for everybody who wants to enjoy 
+                    a nonstop paddling and all the fun in a natural environment.</p>
                 </div>
                 <div class="contain">
                     <img class="image" src="img/river2.jpg">
                     </div>
                     <div class="contain">
-                        <img class="image" src="img/kayak1.2.jpg">
+                        <img class="image" src="img/rafting2.jpg">
                         </div>
                         <div class="contain">
                             <img class="image" src="img/kayak1.jpg">
                             </div>
-                            <div class="contain">
-                                <img class="image" src="img/rafting1.jpg">
-                                </div>
+                            
                                 <div class="contain">
-                                    <img class="image" src="img/rafting2.jpg">
+                                    <h4 class="form-title"><span>KAYAKING</span></h4>
+                <p>The warm, clear water that turns teal blue when light hits the deeper pools is 
+                    bordered by tall palm trees and vines. If you want 
+                    to explore by kayak, visit outside the winter manatee season, 
+                    when the waters are filled with these gentle creatures and boating 
+                    is restricted to protect them..</p>
                                     </div>
+                                    <div class="contain">
+                                        <img class="image" src="img/rafting1.jpg">
+                                        </div>
                                     <div class="contain">
                                         <img class="image" src="img/casa1.jpg">
                                         </div>
@@ -89,8 +100,17 @@
                                             <img class="image" src="img/casa2.jpg">
                                             </div>
                                             <div class="contain">
-                                                <img class="image" src="img/casa3.jpg">
+                                                <h4 class="form-title"><span>HOTEL ROOMS</span></h4>
+                                                <p>The accommodations at the Hotel Room have a contemporary
+                                                     design and have central heating. Rooms have a 26-inch 
+                                                     plasma satellite TV, a desk and a private bathroom with a hairdryer.
+
+                                                    Breakfasts are served every morning and the hotel 
+                                                    restaurant offers a modern and varied menu from Monday 
+                                                    to Saturday. Furthermore, there are several bars, 
+                                                    restaurants and shops within a 5-minute walk..</p>
                                                 </div>
+                                               
         </div>
         </main>
         <div>
