--- a/riverguide.html
+++ b/riverguide.html
@@ -45,7 +45,7 @@
 
         <main>
             <div class="box1">
-                <h3>River guide</h3>
+                <h4 class="form-title"><span>RIVER GUIDE</span></h4>
                 <p>Here you have three professional people, who guide you through this amazing trip and landscape
                     just click below each picture to know who wants you to be your guide in all this adventure.
                 </p>
