--- a/riverguide.html
+++ b/riverguide.html
@@ -55,25 +55,23 @@
                
             <div class="contain">
                 <img class="image" src="img/man1.png">
-                <button type="button" onclick="guideRiver()">Press Here</button>
-        <div id="outPut1"></div>
+                <button class="information" type="button" onclick="John()">Press Here</button>
+                <div class="guide" id="outPut1"></div>
                 </div>
 
                 <div class="contain">
                     <img class="image" src="img/women1.jpg">
-                    <button type="button" onclick="guideRiver()">Press Here</button>
-        <div id="outPut2"></div>
+                    <button class="information" type="button" onclick="Anna()">Press Here</button>
+                    <div class="guide" id="outPut2"></div>
                     </div>
 
                     <div class="contain">
                         <img class="image" src="img/man2.jpg">
-                        <button type="button" onclick="guideRiver()">Press Here</button>
-        <div id="outPut3"></div>
+                        <button class="information" type="button" onclick="Peter()">Press Here</button>
+                        <div class="guide" id="outPut3"></div>
                         </div>
                    
         </div>
-        <button type="button" onclick="guideRiver()">Press Here</button>
-        <div id="outPut1"></div>
         </main>
         <div>
         <footer>
