--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
             <div class="textos">
                 <h1>Salmon Rivers</h1>
-                <h2>Book now</h2>
+                <input type="submit" id="book" class="btn-sumit" value="Book Now" href="https://tabidavid.github.io/salmonriveradventures/reservation.html">
 
             </div>
             <div class="wave" style="height: 150px; overflow: hidden;" >
