--- a/riverguide.html
+++ b/riverguide.html
@@ -27,15 +27,16 @@
                <div>
                 <ul class="navigation">
                     <li><a class="ham" href="#">&#9776; Menu</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">River Guide</a></li>
-                    <li><a href="#">Reservation</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://tabidavid.github.io/salmonriveradventures/">Home</a></li>
+                    <li><a href="https://tabidavid.github.io/salmonriveradventures/riverguide.html">River Guide</a></li>
+                    <li><a href="https://tabidavid.github.io/salmonriveradventures/reservation.html">Reservation</a></li>
+                    <li><a href="https://tabidavid.github.io/salmonriveradventures/contact.html">Contact</a></li>
+                </ul>
                </div>  
             </nav>
             <div class="textos">
                 <h1>Salmon Rivers</h1>
-                <h2>Book now</h2>
+                <h2>Adventures</h2>
 
             </div>
             <div class="wave" style="height: 150px; overflow: hidden;" >
