--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     river. A trip that combines beautiful and natural 
                     scenery plus action, to be enjoyed by anyone.
                     This is the choice for everybody who wants to enjoy 
-                    a nonstop paddling and all the fun in a natural environment.</p>
+                    a nonstop paddling and all the fun in a natural environment. 
+                    <a href="https://tabidavid.github.io/salmonriveradventures/reservation.html">Booking Now</a></p>
                 </div>
                 <div class="contain">
                     <img class="image" src="img/river2.jpg">
@@ -89,7 +90,8 @@
                     bordered by tall palm trees and vines. If you want 
                     to explore by kayak, visit outside the winter manatee season, 
                     when the waters are filled with these gentle creatures and boating 
-                    is restricted to protect them..</p>
+                    is restricted to protect them.
+                    <a href="https://tabidavid.github.io/salmonriveradventures/reservation.html">Booking Now</a></p>
                                     </div>
                                     <div class="contain">
                                         <img class="image" src="img/rafting1.jpg">
@@ -109,7 +111,8 @@
                                                     Breakfasts are served every morning and the hotel 
                                                     restaurant offers a modern and varied menu from Monday 
                                                     to Saturday. Furthermore, there are several bars, 
-                                                    restaurants and shops within a 5-minute walk..</p>
+                                                    restaurants and shops within a 5-minute walk.
+                                                    <a href="https://tabidavid.github.io/salmonriveradventures/reservation.html">Booking Now</a></p>
                                                 </div>
                                                
         </div>
