--- a/riverguide.html
+++ b/riverguide.html
@@ -48,8 +48,9 @@
             <div class="box1">
                 <h4 class="form-title"><span>RIVER GUIDE</span></h4>
                 <p>Here you have three professional people, who guide you through this amazing trip and landscape
-                    just click below each picture to know who wants you to be your guide in all this adventure.
+                    just click below each picture to know who wants you to be your guide in all this adventure. Just do it, go and book it! 
                 </p>
+               
             </div>
            
 
