--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="here we have the Salmon river adventures to find amazing natural places to visit">
+    <meta name="description" content="here we have the Salmon river adventures to find amazing natural places to visit and contact the company">
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
     
@@ -78,7 +78,7 @@
                     <img class="image" src="img/river2.jpg">
                     </div>
                     <div class="contain2">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.575081082508!2d-116.3198896489592!3d45.417907544449655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a6c5695ed5fae5%3A0x837cd0558ffd520c!2s1000%20S%20Main%20St%2C%20Riggins%2C%20ID%2083549%2C%20EE.%20UU.!5e0!3m2!1ses!2sec!4v1586397343708!5m2!1ses!2sec" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.575081082508!2d-116.3198896489592!3d45.417907544449655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a6c5695ed5fae5%3A0x837cd0558ffd520c!2s1000%20S%20Main%20St%2C%20Riggins%2C%20ID%2083549%2C%20EE.%20UU.!5e0!3m2!1ses!2sec!4v1586397343708!5m2!1ses!2sec" width="100%" height="300px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                         </div>
                         <div class="contain2">
                             <h4>CONTACT INFORMATION</h4>
