--- a/reservation.html
+++ b/reservation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="here we have the Salmon river adventures to find amazing natural places to visit">
+    <meta name="description" content="here we have the Salmon river adventures to find amazing natural places to visit and make reservation">
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
     
